[package]
name = "include-po"
version = "0.1.1"
edition = "2021"
description = "Convert message catalogs (PO files) into Rust modules"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rodrigorc/include-po"
categories = ["localization", "internationalization"]
keywords = ["gettext", "i18n", "l10n", "translation"]

[lib]
doctest = false

[dependencies]
thiserror = "2"
nom = "8"
nom-language = "0.1"
tr = { version = "0.1.10", default-features = false }
